@@ -1,15 +1,15 @@
 
 CC = gcc
 
-CFLAGS += -DHAVE_CONFIG_H -I../src -I../lib -I../plugin -I. -I.. -Icrypt -Wall -Wno-unused -fomit-frame-pointer
+#DEBUGFLAGS = -DDEBUG -DHEAVY_DEBUG
+#DEBUGFLAGS = -DDEBUG
+DEBUGFLAGS = 
+
+CFLAGS += -DHAVE_CONFIG_H $(DEBUGFLAGS) -I../src -I../lib -I../plugin -I. -I.. -Icrypt -Wall -Wno-unused -fomit-frame-pointer
 LDFLAGS += -lm
 
 GIFT_INSTALL_DIR=$(HOME)/.giFT
 FST_INSTALL_DIR=$(GIFT_INSTALL_DIR)/FastTrack
-
-#DEBUGFLAGS = -D DEBUG -D HEAVY_DEBUG
-#DEBUGFLAGS = -D DEBUG
-DEBUGFLAGS = 
 
 FST_SOURCES = fst_fasttrack.c fst_download.c fst_hash.c fst_http.c fst_meta.c fst_node.c fst_packet.c fst_search.c fst_session.c fst_stats.c fst_utils.c md5.c
 CRYPT_SOURCES = crypt/fst_crypt.c crypt/enc_type_1.c crypt/enc_type_2.c crypt/enc_type_20.c
@@ -20,13 +20,24 @@ CRYPT_OBJS = crypt/fst_crypt.o crypt/enc_type_1.o crypt/enc_type_2.o crypt/enc_t
 all: $(FST_OBJS) $(CRYPT_OBJS)
 	@echo
 	$(CC) -shared -o FastTrack.so $(CFLAGS) $(LDFLAGS) $(DEBUGFLAGS) $(FST_OBJS) $(CRYPT_OBJS)
-#	$(CC) -dynamiclib -flat_namespace -undefined suppress -o FastTrack.so  $(CFLAGS) $(LDFLAGS) $(DEBUGFLAGS) $(FST_OBJS) $(CRYPT_OBJS)
 	@echo
 	@echo "*************************************************************"
 	@echo Your giFT settings path is $(GIFT_INSTALL_DIR) and the plugin will be installed into $(FST_INSTALL_DIR).
 	@echo "If this is correct you can run 'make install' now."
 	@echo "If giFT is NOT installed in the above place you MUST change the path in the Makefile before running 'make install'"
 	@echo "*************************************************************"
+
+
+mac: $(FST_OBJS) $(CRYPT_OBJS)
+	@echo
+	$(CC) -dynamiclib -flat_namespace -undefined suppress -o FastTrack.so  $(CFLAGS) $(LDFLAGS) $(DEBUGFLAGS) $(FST_OBJS) $(CRYPT_OBJS)
+	@echo
+	@echo "*************************************************************"
+	@echo Your giFT settings path is $(GIFT_INSTALL_DIR) and the plugin will be installed into $(FST_INSTALL_DIR).
+	@echo "If this is correct you can run 'make install' now."
+	@echo "If giFT is NOT installed in the above place you MUST change the path in the Makefile before running 'make install'"
+	@echo "*************************************************************"
+
 
 install:
 	@echo "*************************************************************"
